# polymarket-rs-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  SECURITY.md
.cursor/: scratchpad.md
.github/workflows/: ci.yml
crates/polymarket-bindings/: Cargo.toml  LICENSE  README.md
crates/polymarket-bindings/src/: de.rs  lib.rs  shared.rs
crates/polymarket-bindings/src/clob/: market_data.rs  mod.rs  order_book.rs
crates/polymarket-bindings/src/gamma/: event.rs  market.rs  mod.rs
crates/polymarket-client/: Cargo.toml  README.md
crates/polymarket-client/examples/: hybrid_server.rs  trading.rs
crates/polymarket-client/src/: account.rs  account_client.rs  environment.rs  error.rs  http.rs  lib.rs  pagination.rs  params.rs  public_client.rs
crates/polymarket-client/src/secure/: account.rs  credentials.rs  mod.rs  secure_client.rs  subscribe.rs  wallet.rs
crates/polymarket-client/src/subscriptions/: mod.rs  types.rs
crates/polymarket-client/tests/: account_integration.rs  integration.rs  secure_integration.rs  websocket_integration.rs
crates/polymarket-types/: Cargo.toml  README.md
crates/polymarket-types/src/: error.rs  hex.rs  ids.rs  lib.rs
examples/: account.rs  quickstart.rs  trading.rs  websocket.rs
