[package]
name = "polymarket-bindings"
description = "API bindings and normalized models for the Polymarket Rust SDK"
readme = "README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
polymarket-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
